feat: support dubbo client and add more plugins